--- a/website/src/main/resources/website/contactus.hbs
+++ b/website/src/main/resources/website/contactus.hbs
@@ -45,12 +45,19 @@
 
        	  
        	  <p>You may send an email to <a href="mailto:project@yorubaname.com">project@yorubaname.com</a></p>
-              <p>Or visit our office at YorubaName.com<br>
-                  2nd Floor, The Garnet Building<br>
-                  Lekki - Epe Express Road, Lekki<br>
-                  Lagos 101245<br>
-                  Nigeria
-               </p>
+          <p>Or visit our office at YorubaName.com<br>
+              2nd Floor, The Garnet Building<br>
+              Lekki - Epe Express Road, Lekki<br>
+              Lagos 101245<br>
+              Nigeria
+          </p>
+
+          <p class="lead">Follow us on Social Media</p>
+          <nav class="social-links">
+            <a href="https://facebook.com/YorubaNames" target="_blank"><i class="fa fa-facebook"></i></a>
+            <a href="https://twitter.com/YorubaNames" target="_blank"><i class="fa fa-twitter"></i></a>
+          </nav>
+
        </div>
    </div>
 </section>
