--- a/website/src/main/resources/website/home.hbs
+++ b/website/src/main/resources/website/home.hbs
@@ -82,10 +82,10 @@
 
             <div class="row">
                 <div class="col-sm-12 text-center"><h3>Our key supporters</h3></div>
-                <div class="col-sm-2 col-sm-offset-2"><img class="img-responsive" src="/assets/img/supporters/capital_square.png"></div>
-                <div class="col-sm-2"><img class="img-responsive" src="/assets/img/supporters/goethe_institut.png"></div>
-                <div class="col-sm-2"><img class="img-responsive" src="/assets/img/supporters/alti.png"></div>
-                <div class="col-sm-2"><img class="img-responsive" src="/assets/img/supporters/lgmediting-logo.png"></div>
+                <div class="col-sm-2 col-sm-offset-2"><a href="http://capitalsqua.re/" target="_blank"><img class="img-responsive" src="/assets/img/supporters/capital_square.png"></a></div>
+                <div class="col-sm-2"><a href="http://www.goethe.de/ins/ng/en" target="_blank"><img class="img-responsive" src="/assets/img/supporters/goethe_institut.png"></a></div>
+                <div class="col-sm-2"><a href="http://www.alt-i.org/index.php" target="_blank"><img class="img-responsive" src="/assets/img/supporters/alti.png"></a></div>
+                <div class="col-sm-2"><a href="http://lgmediting.com/" target="_blank"><img class="img-responsive" src="/assets/img/supporters/lgmediting-logo.png"></a></div>
             </div>
 
             <div class="row" style="margin-top:40px">
