--- a/website/src/main/resources/website/singleresult.hbs
+++ b/website/src/main/resources/website/singleresult.hbs
@@ -15,7 +15,7 @@
 							<i class="fa fa-volume-up" data-toggle="tooltip" data-placement="top" title="{{message "lang.play-sound"}}"></i>
 						</button>
 
-						<span class="pull-right text-muted"><strong>{{message "lang.submitby"}}</strong> {{ name.submittedBy }}</span>
+						<!--span class="pull-right text-muted"><strong>{{message "lang.submitby"}}</strong> {{ name.submittedBy }}</span-->
 					</p>
 
 					<div class="share">
