Added controller for /team. Updated message bundle a lil bit

--- a/website/src/main/resources/website/team.hbs
+++ b/website/src/main/resources/website/team.hbs
@@ -14,10 +14,10 @@
 
        <div class="col-sm-6 col-sm-offset-2">
 
-        <h3>Our Amazing Team</h3>
+        <h3>{{message "lang.amazing-team"}}</h3>
 
         <div class="well well-sm">
-			<h4>Join the team</h4>
+			<h4>{{message "lang.join-the-team"}}</h4>
 			<p class="lead">We are always on the look out for more volunteers to join our team.</p>
 			<a class="btn btn-lg btn-success" href="/volunteer">Volunteer</a>
 		</div>
