--- a/website/src/main/resources/website/aboutus.hbs
+++ b/website/src/main/resources/website/aboutus.hbs
@@ -14,23 +14,23 @@
 
        <div class="col-sm-6 col-sm-offset-2">
 
-       	  <h3>What is YorubaName.com?</h3>
+       	  <h3>{{message "lang.what-is-yorubaname"}}?</h3>
        	  
        	  <p class="lead">YorubaName.com is an online intervention to preserve and document all Yorùbá names in a multimedia format. It is part of a long-term project to document all types of African cultural experiences on the internet as a way ofensuring the survival of African identities in their various expressions.</p>
        	  
        	  <p>Initially presented as a university thesis in 2005, this multimedia dictionary of Yorùbá Names found a new iteration in January 2015 as a crowdsourced platform run by volunteer language enthusiasts from around the world. It is supported by funds from hundreds of individual donors who contributed to an Indiegogo fundraising campaign that ran from January to March 2015.</p>
 
-       	  <h4>How did we go about collecting names?</h4>
+       	  <h4>{{message "lang.how-names-collected"}}?</h4>
 
 		<p>All the names in this database were gathered from word of mouth, reference books, other published and unpublished materials, radio and television, the internet, family histories, and quite simply from asking every single person wemeet about their names! Field trips by volunteer linguists added an extra layer of names, meanings and sometimes elements of local history linked to the names as well.</p>
 
-		<h4>Better than a pronunciation guide: listen to the names...</h4>
+		<h4>{{message "lang.about-tts"}}...</h4>
 
 		<q>The audio files attached to each name in this dictionary were generated through speech synthesis, using a technique refined and adapted by team members of the YorubaName project. </q>
 
 		<p>Some of the output might not be perfect at first. Our promise is to keep experimenting until we reach perfection in pronunciation: by then, this dictionary will have become a fantastic tool to teach any non-Yorùbá speaker how to correctly pronounce a Yorùbá name.</p>
 
-		<h4>Let's build up this database together</h4>
+		<h4>{{message "lang.lets-build-together"}}</h4>
 
 		<p>Dictionary entries are dynamic, so as to allow both you, the users, and our in-house linguists to add information or correct any mistakes that may have slipped through the verification process. As a crowdsourced project, our aim is to keep improving each entry in order to preserve the integrity of the meaning of each name for our users and for future generations.</p>
 
