Based on feedback updated/improve the search, name not found, offer to suggest, flow

--- a/website/src/main/resources/website/entrynotfound.hbs
+++ b/website/src/main/resources/website/entrynotfound.hbs
@@ -6,7 +6,7 @@
 <section>
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-6 col-sm-offset-3 text-center">
+			<div class="col-sm-7">
 			<h3 class="name sec-color">{{message "lang.entry-not-found.no-match"}} "{{ name.name }}"</h3>
 			<p class="pri-color">{{message "lang.entry-not-found.suggest-text"}}</p>
 			<hr />
