--- a/website/src/main/resources/website/searchresults.hbs
+++ b/website/src/main/resources/website/searchresults.hbs
@@ -9,15 +9,24 @@
         <div class="row">
             
             <div class="col-sm-7 search-results">
+                <h4>{{message "lang.entry-not-found.no-match"}} <strong class="intonation"><i>{{query}}</i></strong><br/>
+                    {{message "lang.entry-not-found.suggest-pretext"}}
+                    <a href="/submitname?missing={{query}}">{{message "lang.go-to-suggest-linktext"}}</a>
+                </h4>
 
-                <h4>{{message "lang.entryfoundfor"}} <strong class="intonation"><i>{{query}}</i></strong></h4>
 
-                {{#each names}}
-                   <hr>
-                    <h4 class="strong-text intonation"><a href="/entries/{{this.name}}">{{ this.name }}</a></h4>
-                    <p><strong>Brief Meaning: </strong> {{this.meaning}} </p>
-                    <p class="small text-muted"><strong>{{message "lang.submitby"}}</strong> {{ this.submittedBy }} </p>       
-                {{/each}}
+                {{#if names}}
+                    <p>{{message "lang.entry-not-found.similar-names"}}</p>
+                    {{#each names}}
+                        <hr>
+                        <h4 class="strong-text intonation"><a href="/entries/{{this.name}}">{{ this.name }}</a></h4>
+
+                        <p><strong>Brief Meaning: </strong> {{this.meaning}} </p>
+
+                        <p class="small text-muted"><strong>{{message "lang.submitby"}}</strong> {{ this.submittedBy }}
+                        </p>
+                    {{/each}}
+                {{/if}}
             </div>
             
         </div>
