--- a/website/src/main/resources/website/submitname.hbs
+++ b/website/src/main/resources/website/submitname.hbs
@@ -1,14 +1,13 @@
 <!-- Header -->
 {{> header }}
 
-{{> searchform }}
+{{> minisearchform }}
 
 <!-- main-content -->
 <section>
    <div class="container">
        <div class="row">
-           <div class="col-sm-3"></div>
-           <div class="col-sm-6">
+           <div class="col-sm-7">
                 <h3>{{message "lang.submitname.heading"}}</h3>
                 <hr/>
 
