--- a/website/src/main/resources/website/volunteer.hbs
+++ b/website/src/main/resources/website/volunteer.hbs
@@ -9,12 +9,8 @@
    <div class="container">
 
        <div class="row">
-       
-       <div class="col-sm-3">
-       	  
-       </div>
 
-       <div class="col-sm-6">
+       <div class="col-sm-6 col-sm-offset-2">
 			<h3>Admin/Volunteers</h3>
 			<p><!-- commenting this now since we have a stable team somewhat and most of the request we are getting are for mobile development: something we are not planning for at the moment
 
