--- a/website/src/main/resources/website/minisearchcomponent.hbs
+++ b/website/src/main/resources/website/minisearchcomponent.hbs
@@ -1,5 +1,4 @@
-
-	<div class="input-group">             			
-	    <input type="text" class="form-control" id="miniKeyboard" name="name" placeholder="{{message "lang.submitname.enternameplch"}}" required="true">
-	    <span class="input-group-addon" id="miniKeyboardp"><i class="fa fa-keyboard-o"></i></span>
-	</div>
+<div class="input-group">
+	<input type="text" class="form-control" id="miniKeyboard" name="name" placeholder="{{message "lang.submitname.enternameplch"}}" value="{{missingName}}" required="true">
+	<span class="input-group-addon" id="miniKeyboardp"><i class="fa fa-keyboard-o"></i></span>
+</div>
