fixed non-clickable logo issue

--- a/website/src/main/resources/public/assets/css/styles.css
+++ b/website/src/main/resources/public/assets/css/styles.css
@@ -420,7 +420,15 @@ footer a + a {
 	}
 }
 
+@media (min-width: 480px) {
+	.navbar {
+		width:auto;
+		float:right;
+	}
+}
+
 @media (max-width: 480px) {
+
 	.search-input input {
 		width: 100%;
 	}
