Removing the application cache. Was causing unnecessary requests to the server and it is deprecated see https://developer.mozilla.org/en-US/docs/Web/HTML/Using_the_application_cache

--- a/website/src/main/resources/website/header.hbs
+++ b/website/src/main/resources/website/header.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="yoruba.appcache">
+<html>
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" />
     <title>{{ title }} - YorubaName</title>
