--- a/website/src/main/resources/website/searchresults.hbs
+++ b/website/src/main/resources/website/searchresults.hbs
@@ -28,7 +28,7 @@
                     {{/each}}
                 {{/if}}
             </div>
-            
+            {{> alphabets}}
         </div>
     </div>
 </section>
