--- a/website/src/main/resources/website/singleresult.hbs
+++ b/website/src/main/resources/website/singleresult.hbs
@@ -71,9 +71,11 @@
 
 					    <br><br>
 						<h4>{{message "lang.see-also"}}</h4>
-					
+
 					<!-- /see also -->
+
 				</div>
+
 			<!-- sidebar -->
 			<aside>
 				<div class="col-md-4">
@@ -81,7 +83,9 @@
 				</div>
 			</aside>
 			<!-- /sidebar -->
+			{{> alphabets}}
 		</div>
+
 	</div>
 </section>
 <!-- /main-content -->
