--- a/website/src/main/resources/website/aboutus.hbs
+++ b/website/src/main/resources/website/aboutus.hbs
@@ -38,7 +38,7 @@
 
        </div>
 
-       <div class="col-sm-3" style="color:#c8ad75;">
+       <div class="col-sm-3">
 
            <br>
 
@@ -64,7 +64,7 @@
 
 			<p>Adéyínká Ajàlà<br> Dave Agboọlá<br> Luis Morais</p>
 
-      <p style="margin-top:15px;">Click here to see <a href="/team">our team profile</a></p>
+      <p style="margin-top:15px;"><a class="btn btn-sm btn-success" href="/team">Click here to see our team profile</a></p>
        	
        </div>
 
