Commented out tts icon for now

--- a/website/src/main/resources/website/team.hbs
+++ b/website/src/main/resources/website/team.hbs
@@ -20,7 +20,7 @@
 			<a class="btn btn-lg btn-success" href="/volunteer">Volunteer</a>
 		</div>
 
-		<p><strong>Dadepo ADÉRẸ̀MÍ</strong> was one of the first volunteers to join the team in early 2015. He sees the world wide web as a universal platform and thus believes every culture/creed should be able to utilize it: consume and create content, hold discussion etc in their own languages if so wish. He currently leads the Software Development team for the project, among other administrative roles.</p>
+		<p><strong>Dadepo ADÉRẸ̀MÍ</strong> was one of the first volunteers to join the team in early 2015. He sees the world wide web as a universal platform and thus believes every culture/creed should be able to utilize it for self expression. He currently helps in coordinating Software Development efforts for the project, among other administrative roles.</p>
 
 		<p><strong>Dave AGBOỌLÁ</strong> is a linguist, teacher and writer with experience in research, editing and administration. He has worked as a language teacher at various levels of education, most recently at the University of Lagos in the English Department. He currently works as the Executive Assistant to the Speaker at the Lagos House of Assembly, where his sole task is to prepare speeches for the Speaker. Dave came to know about the Yoruba Name project on Twitter a couple of months ago. He has been active in the lexicography team, coming up with tone marks for some Yorùbá names and researching name variations. He blogs about language at <a href="http://languageclinic.webnode.com" target="_blank">languageclinic.webnode.com</a>.</p>
 
