Corrected some of the feedbacks on website

--- a/website/src/main/resources/website/header.hbs
+++ b/website/src/main/resources/website/header.hbs
@@ -65,10 +65,10 @@
                         <!--li><a href="/login">{{message "lang.logreg"}}</a></li-->
                         <li><a href="/contact-us">{{message "lang.contact"}}</a></li>
                     </ul>
-                    <!--nav class="social-links">
+                    <nav class="social-links">
                         <a href="https://facebook.com/YorubaNames" target="_blank"><i class="fa fa-facebook"></i></a>
                         <a href="https://twitter.com/YorubaNames" target="_blank"><i class="fa fa-twitter"></i></a>
-                    </nav-->
+                    </nav>
                 </div>
             </div>
    		</div>
