--- a/website/src/main/resources/website/home.hbs
+++ b/website/src/main/resources/website/home.hbs
@@ -9,7 +9,8 @@
             {{> searchcomponent }}
 
             <h3>{{message "lang.jumboh31"}}</h3>
-            <a href="/submitname" class="btn btn-lg btn-link">{{message "lang.jumboh32"}}</a>
+            <a href="/submitname" class="btn btn-lg btn-link" style="margin-bottom:15px">{{message "lang.jumboh32"}}</a>
+            <p>"A phenomenal concept that will keep the Yorùbá culture alive. I strongly support the endeavor." <br> &mdash; Ọọ̀ni Adéyẹyè Ẹniìtàn Ògúnwùsì <em>(Ọ̀jájá II. Ọọ̀ni of Ifẹ̀ Kingdom)</em></p>
         </div>
     </div>
 </section>
@@ -117,10 +118,8 @@
                       action="//YorubaName.us10.list-manage.com/subscribe/post?u=447ae670439b332a80e50107c&amp;id=0cfdd9d988"
                       target="_blank">
                     <h4>YorubaName Newsletter</h4>
-
-                    <p>Get the latest entries and meanings of the most famous and not-so-famous Yoruba names.</p>
+                    <p>Follow is behind the scenes for exclusive news, freebies, links, lexicographer tools, and other important updates about this dictionary.</p>
                     <input type="hidden" name="b_447ae670439b332a80e50107c_0cfdd9d988" tabindex="-1" value="">
-
                     <div class="form-group">
                         <input type="email" name="EMAIL" placeholder="Enter your email here" class="form-control"
                                required="required">
