commented out the nav social media links, as the way it is placed is not visually pleasing

--- a/website/src/main/resources/website/header.hbs
+++ b/website/src/main/resources/website/header.hbs
@@ -65,10 +65,12 @@
                         <!--li><a href="/login">{{message "lang.logreg"}}</a></li-->
                         <li><a href="/contact-us">{{message "lang.contact"}}</a></li>
                     </ul>
+                    <!-- Commenting out as not visually germane
                     <nav class="social-links">
                         <a href="https://facebook.com/YorubaNames" target="_blank"><i class="fa fa-facebook"></i></a>
                         <a href="https://twitter.com/YorubaNames" target="_blank"><i class="fa fa-twitter"></i></a>
                     </nav>
+                    -->
                 </div>
             </div>
    		</div>
