Showing Famous People and Medialink

--- a/website/src/main/resources/website/singleresult.hbs
+++ b/website/src/main/resources/website/singleresult.hbs
@@ -21,7 +21,7 @@
 					<div class="share">
 
 					<a class="btn btn-sm btn-success" href="#/improve-entry" data-toggle="modal" data-target="#improveEntryModal" style="margin-right:20px">
-						{{message "lang.improve-entry"}} <i class="fa fa-pencil"></i>
+						{{message "lang.improve-entry"}}  <i class="fa fa-pencil"></i>
 					</a>
 
 					<span class="text-muted">{{message "lang.share"}} <i class="fa fa-share-alt"></i></span>
@@ -61,6 +61,18 @@
 						<p>{{message "lang.commonin"}} {{name.geoLocation.place}}</p>
 					
 					<!-- /geolocation -->
+
+					    <br><br>
+						<h4>{{message "lang.famous-persons"}}</h4>
+						<p>{{name.famousPeople}}</p>
+					
+					<!-- /famousPeople -->
+
+					    <br><br>
+						<h4>{{message "lang.media-links"}}</h4>
+						<p>{{name.media}}</p>
+					
+					<!-- /media -->
 
 					
 						<br><br>
