--- a/website/src/main/resources/website/footer.hbs
+++ b/website/src/main/resources/website/footer.hbs
@@ -1,9 +1,15 @@
 <footer class="hidden-xs">
 	<div class="container">
 	  <div class="row">
-	    <div class="col-sm-4">
+	    <div class="col-sm-4 text-left">
 	  	<p>Copyright &copy; 2016. YorubaName.com</p></div>
-	  	<div class="col-sm-8 text-right">
+	  	<div class="col-sm-4 text-center">
+	  		<nav class="social-links">
+                <a href="https://facebook.com/YorubaNames" target="_blank"><i class="fa fa-facebook"></i></a>
+                <a href="https://twitter.com/YorubaNames" target="_blank"><i class="fa fa-twitter"></i></a>
+            </nav>
+	  	</div>
+	  	<div class="col-sm-4 text-right">
 	    <a href="/">{{message "lang.home"}}</a><a href="/about-us">{{message "lang.about"}}</a><a href="https://www.indiegogo.com/projects/the-yoruba-names-dictionary#/story" target="_blank">{{message "lang.donate"}}</a><a href="/volunteer">{{message "lang.volunteer"}}</a><a href="blog.yorubaname.com" target="_blank">{{message "lang.blog"}}</a><a href="/contact-us">{{message "lang.contact"}}</a></div>
 	    <div style="visibility: hidden"><div id="host">{{ host }}</div></div>
 	  </div>
