--- a/website/src/main/resources/website/singleresult.hbs
+++ b/website/src/main/resources/website/singleresult.hbs
@@ -109,7 +109,7 @@
 		    <div class="modal-header">
 		    	<h3>{{message "lang.improve-entry.help-us"}} "{{ name.name }}"</h3>
 		    </div>
-			<form name="name_feedback" class="modal-body" action="/v1/feedback" method="post">
+			<form name="name_feedback" class="modal-body" action="/v1/feedbacks" method="post">
 			    <div class="response"></div>
 				<div class="form-group">
                     <input id="nameToFeedback" type="hidden" value="{{name.name}}"/>
